--- a/default/error/400.html
+++ b/default/error/400.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>400| LinwinSoft SHS</title>
+    <title>400| Bad Request</title>
 </head>
 <body>
     <h1>Status Code: 400</h1>
